	
        * src/Makefile.am:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-shell-ui.xml:
        * src/nautilus-window-menus.c:
	Remove all connect to server use for now
	Not sure what to do with it in the gvfs world
	
        * src/file-manager/fm-error-reporting.c:
        * src/nautilus-main.c:
	Remove gnome_vfs uses

2007-11-01  Paolo Borelli  <pborelli@katamail.com>

        * src/file-manager/fm-directory-view.c: do not use the deprecated
	gnome_util_home_file and make sure tha ~/.gnome2 is created if it
	doesn't exist.

2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
	Convert unmount volume to gio
	Remove unmount drive (makes no sense!)
	
        * src/nautilus-places-sidebar.c:
	Use new APIs

2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_get_uri_scheme):
	Better get_uri_scheme implementation
	
        * libnautilus-private/nautilus-mime-actions.[ch]:
	Remove the open_with versions (not needed anymore)
	Add support for uri_handlers
	
        * libnautilus-private/nautilus-program-choosing.[ch]:
	Remove now unused function nautilus_launch_show_file
	
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-information-panel.c:
        * src/nautilus-window.c:
	Update for above api changes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-dnd.c:
	Convert default dnd op to gio code

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Update to changed gio API

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Remove more unused gnome-vfs helpers

2007-10-31  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (play_file):
	Use a better pipeline for audio preview (doesn't play videos)